[package]
name = "rusty-keychain"
description = "Password manager written in Rust, using gpg and git for sync"
version = "0.1.0"
authors = ["Marcelino Coll Rovira <coll.marce@gmail.com>"]
readme = "README.md"
keywords = ["manager", "password", "gpg", "security"]
license = "GPLv3"

[dependencies]
clap = "2.13.0"
git2 = "0.4.4"
log = "0.3.6"
log4rs = "0.4.8"
yaml-rust = "0.3.3"
gpgme = "0.4.0"
rand = "0.3.14"